--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: blue;">Hello </h1>
+    <h1 style="color: blue;">Hello there </h1>
 </body>
 </html>
